// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Buttons / Button Taille large 1`] = `
<div
  className="rs"
>
  <button
    aria-pressed={false}
    className="button button--size-large "
    onClick={[Function]}
  >
    Mon bouton
  </button>
</div>
`;

exports[`Storyshots Buttons / Button Taille normal 1`] = `
<div
  className="rs"
>
  <button
    aria-pressed={false}
    className="button button--size-normal "
    onClick={[Function]}
  >
    Mon bouton
  </button>
</div>
`;

exports[`Storyshots Buttons / Button Taille small 1`] = `
<div
  className="rs"
>
  <button
    aria-pressed={false}
    className="button button--size-small "
    onClick={[Function]}
  >
    Mon bouton
  </button>
</div>
`;

exports[`Storyshots Buttons / Button disabled 1`] = `
<div
  className="rs"
>
  <button
    aria-pressed={false}
    className="button button--size-normal "
    disabled={true}
    onClick={[Function]}
  >
    Mon bouton
  </button>
</div>
`;

exports[`Storyshots Buttons / Button flat 1`] = `
<div
  className="rs"
>
  <button
    aria-pressed={false}
    className="button button--size-normal button--flat "
    onClick={[Function]}
  >
    Mon bouton
  </button>
</div>
`;

exports[`Storyshots Buttons / Button main 1`] = `
<div
  className="rs"
>
  <button
    aria-pressed={false}
    className="button button--size-normal "
    onClick={[Function]}
  >
    Mon bouton
  </button>
</div>
`;

exports[`Storyshots Buttons / Button toggled 1`] = `
<div
  className="rs"
>
  <button
    aria-pressed={true}
    className="button button--size-normal button--toggled "
    onClick={[Function]}
  >
    Mon bouton
  </button>
</div>
`;
